--- a/index.html
+++ b/index.html
@@ -27,3 +27,21 @@
 </body>
 </html>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Content</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="content-container">
+        <h2>Welcome to Protected Content!</h2>
+        <p>This content is only visible to logged-in users.</p>
+        <button id="logoutButton" class="btn">Logout</button>
+    </div>
+
+    <script src="content.js"></script>
+</body>
+</html>
