--- a/sign-up.html
+++ b/sign-up.html
@@ -39,3 +39,24 @@
 </body>
 </html>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Sign Up</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <div class="container">
+    <h2>Sign Up</h2>
+    <form id="signupForm">
+      <input type="text" id="signupUsername" placeholder="Username" required />
+      <input type="password" id="signupPassword" placeholder="Password" required />
+      <button type="submit">Sign Up</button>
+    </form>
+    <p id="signupMessage" class="message"></p>
+    <p>Already have an account? <a href="index.html">Log in</a></p>
+  </div>
+  <script src="auth.js"></script>
+</body>
+</html>
